fix weird scaling on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -264,9 +264,15 @@ nav > button:before {
     display: none;
   }
 
+  nav {
+    flex-flow: row wrap;
+  }
+
   nav > button {
     flex: initial;
     flex-grow: 1;
+    padding: 1vw;
+    box-sizing: border-box;
   }
 
   #carter-builder {
@@ -276,12 +282,13 @@ nav > button:before {
       "carter"
       "book";
 
-    grid-template-columns: 1fr;
-    grid-template-rows: auto auto 1fr 1fr;
+    grid-template-columns: 100vw;
+    grid-template-rows: auto auto 2fr 5fr;
+
+    width: 100vw;
   }
 
-  #main-carter {
-    width: 100%;
-    height: 100%;
+  legend {
+    font-size: small;
   }
 }
